// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toaster > renders correctly with close button 1`] = `
[
  <h3
    class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStronger__m4c9owp style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
  >
    Title
  </h3>,
]
`;

exports[`toaster > renders correctly with close button 2`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
}

.emotion-0.Toastify__toast {
  background-color: #ffffff;
  color: #3f4250;
  padding: 1rem;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
}

.emotion-0.Toastify__toast-container {
  width: 19.5rem;
}

.emotion-0 .Toastify__toast-body {
  margin: 0;
  padding: 0;
  display: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="notification"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default emotion-0 Toastify--animate Toastify__slide-enter--top-right"
          data-in="true"
          id="1"
          role="alert"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <div>
              icon
            </div>
            <div
              class="emotion-3 emotion-2"
            >
              <h3
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStronger__m4c9owp style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
              >
                Title
              </h3>
              Description
            </div>
            <button
              aria-label="close"
              class="styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--default"
              role="progressbar"
              style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`toaster > renders correctly with custom close button 1`] = `
[
  <button
    type="button"
  >
    Decline
  </button>,
]
`;

exports[`toaster > renders correctly with custom close button 2`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
}

.emotion-0.Toastify__toast {
  background-color: #ffffff;
  color: #3f4250;
  padding: 1rem;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
}

.emotion-0.Toastify__toast-container {
  width: 19.5rem;
}

.emotion-0 .Toastify__toast-body {
  margin: 0;
  padding: 0;
  display: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="notification"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default emotion-0 Toastify--animate Toastify__slide-enter--top-right"
          data-in="true"
          id="2"
          role="alert"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <div>
              Avatar
            </div>
            <div
              class="emotion-3 emotion-2"
            >
              <h3
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmallStronger__m4c9owp style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
              >
                Invitation
              </h3>
              <button
                type="button"
              >
                Decline
              </button>
            </div>
          </div>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--default"
              role="progressbar"
              style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
